# MoNTreRa

./: .Rhistory  .gitignore  buildAndRun.sh  buildAndRunAllTissues.sh  buildAndRunAllTissuesRep.sh  buildCluster.sh  clusterInstructions.txt  connectSSH.sh
Figures/: createVideo.sh  createVideoms.sh  days.srt  ms.srt  pO240x2.srt  state40x2.avi  state40x2sub.avi  statetissue26OnlyHealCellDiv.srt
InputFiles/: dataOSSyn.csv
Matlab/: CD31.m  VPIPRO.m  convSobol.m  corrArtOutputs.m  corrOutputs.m  diffAllOutputs.m  diffAllTissues.m  diffScalOutputMultSim.m  diffScalOutputs.m  diffScalOutputsArt.m  diffVectOutputs.m  errors.m  intTumDens.m  morris.m  morris.m~  morrisPar.m  morrisVarRange.m  oxyHist.m  plotAllOutputs.m  plotEndTreatTumDens.m  plotIntTumDens.m  plotMeanAllOutputs.m  plotMeanEndTreatTumDens.m  plotMeanIntTumDens.m  plotMeanOutput.m  plotMeanTimeTo95.m  plotMeanTimeTo99.m  plotMeanTumDens.m  plotOutput.m  plotParEndTreatTumDens.m  plotParIntTumDens.m  plotParOutput.m  plotParTimeTo95.m  plotParTimeTo99.m  plotParTumDens.m  plotParY.m  plotSobolMeanOutput.m  plotSobolOutput.m  plotTimeTo95.m  plotTimeTo99.m  (+9 more)
Python/: ADC.py  curves.py  ensemble.py  entropy.py  ipython.html  pO2Hist.py  probas.res  recurrence.py  recurrence2.py  recurrence3.py  recurrence4.py  recurrenceOS.py  recurrenceSens.py  sensAnal.py  survival.py  tcp.py  totalDoses.py
R/: .Rhistory  for_carlos.R  morris.R  sobol.R  tcp.R  wilcoxon.R
src/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  absOxyCell.cpp  absOxyCell.hpp  absOxyTissue.cpp  absOxyTissue.hpp  alloc.cpp  alloc.hpp  cell.cpp  cell.hpp  cmake_install.cmake  constOxyCell.cpp  constOxyCell.hpp  constOxyTissue.cpp  constOxyTissue.hpp  coupler.cpp  coupler.hpp  createAndReadFiles.cpp  createAndReadFiles.hpp  createandreadfiles.hpp  evalModel.cpp  evalModel.hpp  main.cpp  model.cpp  model.hpp  morris.cpp  morris.hpp  oxyCell.cpp  oxyCell.hpp  oxyTissue.cpp  oxyTissue.hpp  rootSimulator.cpp  rootSimulator.hpp  sensAn.hpp  sensAnPy.cpp  sensAnPy.hpp  sensAnR.cpp  sensAnR.hpp  (+13 more)
src/GUI/: RT.pro  RT.pro.user.4.8-pre1  inAnWindow.cpp  inAnWindow.hpp  inWindow.cpp  inWindow.hpp  main.cpp  outAnWindow.cpp  outAnWindow.hpp  outWindow.cpp  outWindow.hpp  outWindow3D.cpp  outWindow3D.hpp  outWindowOxy.cpp  outWindowOxy.hpp  simThread.cpp  simThread.hpp  startWindow.cpp  startWindow.hpp  style.hpp  switch.cpp  switch.hpp
